css/main.css
/* The code for the navigation code was directly taken from a teachers video, 
there's been some deviation from it, and colours added since this is something the project refers to.
From there on, I've tried to incorporate a one to one replication of the project file, in order to make this 'website'. */

@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');

:root {
    /* Grayscale */
    --color-gray-100: #F3F6FF; /* Light BG */
    --color-gray-200: #EFF2FC; /* Secondary */
    --color-gray-300: #E2E5F1; /* Divider, Border */
    --color-gray-400: #D4D7E5; /* Forms Border */
    --color-gray-500: #B4B7C9; /* Input Placeholder */
    --color-gray-600: #9397AD; /* Muted Text */
    --color-gray-700: #565973; /* Body Text */
    --color-gray-800: #33354D; /* Navigation */
    --color-gray-900: #0B0F19; /* Header, Dark */
    /* Brand */
    --color-primary: #6366F1; /* Brand, Primary */
    --color-secondary: #585C7B; /* Some Text */
    --color-gradiant-1: #6366F1; /* 0% */
    --color-gradiant-2: #8B5CF6; /* 50% */
    --color-gradiant-3: #D946EF; /* 100% */
    /* System & Buttons */
    --color-red: #EF4444; /* Error */
    --color-green: #22C55E; /* Success */
    --color-yellow: #FFBA08; /* Warning */
    --color-blue: #4C82F7; /* Info */
    --color-black: #000; /* Black Button */
    /* Shadows */
    --color-white: #fff; /* S, M, L */
    --color-brand-btn: #6366F1; /* Brand, Primary */
    /* Logos */
    --color-twitter: #1CA1F2; /* Twitter Blue */
    --color-youtube: #FF0000; /* Youtube Red */

    --container-padding: 1rem;
    --transition-time: all 0.2s;

}

/* ------------------------------------------------------------- MOBILE VERSION / BASE-LINE CONFIGURATION */
/* MOBILE VERSION / BASE-LINE CONFIGURATION */
.container {
    width: 100%;
    padding-left: var(--container-padding);
    padding-right: var(--container-padding);
    margin-left: auto;
    margin-right: auto;    
}

* {
    box-sizing: border-box;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

body, section, div, header, footer, main, aside, nav, blockquote, p, span {
    margin: 0;
    padding: 0;
}

body {
    font-family: "Manrope", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 18px;
}

/* This part divides the site into multiple grids, for the ease of manipulating of the code. */
.wrapper {
    display: grid;
    grid-template-rows: auto 1fr auto;
    height: 100vh;
}

/* This code dictates how links should behave. */
a {
    color: var(--color-primary);
    text-decoration: none;
}
a:hover {
    color: var(--color-primary);
    /* text-decoration: underline; */
}


/* This handles how buttons should look, act and feel. */
.btn-primary {
    background-color: var(--color-primary);
    color: var(--color-white);
    border-radius: 8px;
    padding: 8px 25px;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
}
.btn-primary:hover {
    background-color: var(--color-gray-600);
    color: var(--color-white);
    text-decoration: none;
}
.btn-primary i {
    margin-right: .5rem;
}

.btn-round-white {
    background-color: var(--color-white);
    color: var(--color-white);
    border-radius: 100%;
    padding: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
}
.btn-round-white:hover {
    background-color: var(--color-gray-600);
    color: var(--color-white);
    text-decoration: none;
}
.btn-round-white i {
    margin-right: .5rem;
}

.btn-round-grey {
    background-color: var(--color-secondary);
    color: var(--color-white);
    border-radius: 100%;
    padding: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
}
.btn-round-grey:hover {
    background-color: var(--color-gray-600);
    color: var(--color-white);
    text-decoration: none;
}
.btn-round-grey i {
    margin-right: .5rem;
}


.btn-app {
    background-color: var(--color-black);
    border-radius: 8px;
    padding: 20px 25px;
    width: 100%;
    margin: 12px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
}
.btn-app:hover {
    background-color: var(--color-gray-600);
    color: var(--color-white);
    text-decoration: none;
}
.btn-app i {
    margin-right: .5rem;
}



/* --------------------------------------------------------------- DARK MODE CONFIGURATION */
/* DARK MODE CONFIGURATION */
.dark-mode {
    background-color: var(--color-gray-900);
    color: var(--color-white);

    header {
        .nav-link {
            color: var(--color-gray-500);
        }
        .nav-link:hover {
            color: var(--color-primary);
        }
    
        .btn-toggle-switch {
            .label {
                color: var(--color-gray-700);
            }
        }
    }

    .btn-app {
        background-color: var(--color-gray-200);
    }
    .btn-app:hover {
        background-color: var(--color-gray-500);
    }

    .btn-round-white {
        background-color: var(--color-gray-900);
    }
    .btn-round-white:hover {
        background-color: var(--color-secondary);
    }

    #showcase-item-2 {
        color: var(--color-white);
    }
    /* #showcase {
        background-image: url(/images/dark/background/headerbg-dark.svg);
    } */
}


/* --------------------------------------------------------------- NAVIGATION BAR SECTION */
/* NAVIGATION BAR SECTION */

/* While the earlier button settings focused on the bigger picture, this one focus on the hamburger menu. */
.btn-mobile {
    background-color: transparent;
    border: none;
    font-size: 2rem;
    padding-top: 5px;
}

/* This part handles the toggle button, for dark/light mode. */
.btn-toggle-switch {
    display: flex;
    /* align-items: center; */
    padding-top: 14px;
    gap: 10px;
}
/* ... */

